<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.wyb.su"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#AAAAAA"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="20dp"
        android:background="#AAAAAA"
        android:src="@drawable/bob"
        app:border_color="#FF000000"
        app:border_width="2dp" />

    <info.hoang8f.widget.FButton
        android:id="@+id/ask_weibo"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:drawableLeft="@drawable/invite_friend_weibo"
        android:paddingLeft="5dp"
        android:text="@string/ask_weibo"
        app:buttonColor="@color/fbutton_color_sun_flower"
        app:cornerRadius="5dp"
        app:shadowColor="@color/fbutton_color_orange"
        app:shadowEnabled="true"
        app:shadowHeight="5dp" />

    <info.hoang8f.widget.FButton
        android:id="@+id/ask_qq"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:drawableLeft="@drawable/invite_friend_qq"
        android:paddingLeft="5dp"
        android:text="@string/ask_qq"
        app:buttonColor="@color/fbutton_color_sun_flower"
        app:cornerRadius="5dp"
        app:shadowColor="@color/fbutton_color_orange"
        app:shadowEnabled="true"
        app:shadowHeight="5dp" />

    <info.hoang8f.widget.FButton
        android:id="@+id/ask_weixin"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:drawableLeft="@drawable/invite_friend_weixin"
        android:paddingLeft="5dp"
        android:text="@string/ask_weixin"
        app:buttonColor="@color/fbutton_color_sun_flower"
        app:cornerRadius="5dp"
        app:shadowColor="@color/fbutton_color_orange"
        app:shadowEnabled="true"
        app:shadowHeight="5dp" />

    <info.hoang8f.widget.FButton
        android:id="@+id/ask_phone"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:drawableLeft="@drawable/invite_friend_phone"
        android:paddingLeft="5dp"
        android:text="@string/ask_phone"
        app:buttonColor="@color/fbutton_color_sun_flower"
        app:cornerRadius="5dp"
        app:shadowColor="@color/fbutton_color_orange"
        app:shadowEnabled="true"
        app:shadowHeight="5dp" />

    <info.hoang8f.widget.FButton
        android:id="@+id/ask_email"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:drawableLeft="@drawable/invite_friend_email"
        android:paddingLeft="5dp"
        android:text="@string/ask_email"
        app:buttonColor="@color/fbutton_color_sun_flower"
        app:cornerRadius="5dp"
        app:shadowColor="@color/fbutton_color_orange"
        app:shadowEnabled="true"
        app:shadowHeight="5dp" />

</LinearLayout>